# myRepo

./: PongGame.rar  README.md  SnakeGame.rar  index.html  pyproject.toml  req.txt
Carsale/: Admin.java  Cardetails.java  Customerdetails.java  Guest.java  Home.java
Pong Game/: ball.py  main.py  paddle.py  score.py
Reinforcement_learning/: Streamlit.py
Reinforcement_learning/DQN/: deep_q_learning.py  run.py  simulation_env.py
Reinforcement_learning/DQN/models/: model1.pkl  model2.pkl  model3.pkl  model4.pkl  model5.pkl
Reinforcement_learning/DQN_cust_seg_pricing/: Streamlit.py
Reinforcement_learning/DQN_cust_seg_pricing/DQN/: deep_q_learning.py  run.py  simulation_env.py
Reinforcement_learning/DQN_cust_seg_pricing/generic_files/: config.py  hotel.py  logic_functions.py  (+1 more)
Reinforcement_learning/DQN_seg/: deep_q_learning.py  run.py
Reinforcement_learning/Qlearning/: run.py  simulation_env.py
Reinforcement_learning/Reinforcement_learning_models/: Streamlit.py  Streamlit_multi_seg.py
Reinforcement_learning/archive/: Streamlit_multi_seg.py
Reinforcement_learning/dockerized_RL/: Dockerfile  requirements.txt
Reinforcement_learning/generic_files/: config.py  customer.py  customer_handler.py  h_df.csv  holiday_week_weights.csv  hotel.py  logic_functions.py  utility_functions.py
Reinforcement_learning/lead_time_seg_pricing/: Streamlit.py
Reinforcement_learning/pickle_objects/: customer_handler_obj.pkl  hotel_objs.pkl
SnakeGame/: food.py  main.py  scoreboard.py  snake.py
computer_vision/initial_handson/: pyproject.toml  tutorial_1.py
(+67 files in other folders)
