[tool.poetry]
name = "opencv-proj-1"
version = "0.1.0"
description = "testing opencv"
authors = ["SanjayaElvitigala <elvitigalasanjaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
opencv-python = "4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
